--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -4,3 +4,31 @@
     box-sizing: border-box;
     background-color: rgb(59, 59, 77);
 }
+
+h1 {
+    color: white;
+    text-align: center;
+    margin-top: 20px;
+}
+
+h2 {
+    color: white;
+    text-align: center;
+    margin-top: 30px;
+}
+
+#botones {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    gap: 20px;
+}
+
+button {
+    font-size: 20px;
+    color: white;
+    border: 2px solid white;
+    border-radius: 15px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
