--- a/client/src/styles/BuscarEquipo.css
+++ b/client/src/styles/BuscarEquipo.css
@@ -18,3 +18,45 @@ input {
     font-size: 20px;
     margin-bottom: 20px;
 }
+
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+}   
+
+h3 {
+    color: white;
+    font-size: 25px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    text-decoration: underline;
+}
+
+.card-equipo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #1a1a1a;
+    box-shadow: 0 0 10px #000;
+    color: white;
+}
+
+img {
+    width: 200px;
+    height: 200px;
+    margin-bottom: 20px;
+    align-items: center;
+}
+
+p {
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+
