--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -2,19 +2,25 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgb(59, 59, 77);
+    background-color: rgb(35, 69, 71);
 }
 
 h1 {
+    margin-top: 30px;
     color: white;
     text-align: center;
-    margin-top: 20px;
 }
 
 h2 {
     color: white;
     text-align: center;
     margin-top: 30px;
+}
+
+hr {
+    width: 80%;
+    margin: 30px auto;
+    border: 2px solid white;
 }
 
 #botones {
