--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -23,6 +23,13 @@ hr {
     border: 2px solid white;
 }
 
+.button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    gap:20px;
+}   
+
 #botones {
     display: flex;
     justify-content: center;
@@ -37,6 +44,12 @@ button {
     border-radius: 15px;
     padding: 10px 20px;
     cursor: pointer;
+}
+
+.search {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
 }
 
 @media screen and (max-width: 768px) {
